# playwright-e2e-framework

./: .gitignore  README.md  failures.html  index.html  overview.html  pyproject.toml  test-cases.html  timeline.html  trends.html
allure/: categories.json
config/: base.yml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
export/: influxDbData.txt  prometheusData.txt
flows/: auth_flow.py  checkout_flow.py
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
locators/: cart_locators.py  checkout_locators.py  inventory_locators.py  login_locators.py
mock-results/: environment.properties  executor.json  flaky_history_qa.json  seed-000-result.json  seed-001-result.json  seed-002-result.json  seed-003-result.json  seed-004-result.json  seed-005-result.json  seed-006-result.json  seed-007-result.json  seed-008-result.json  seed-009-result.json  seed-010-result.json  seed-011-result.json  seed-012-result.json  seed-013-result.json  seed-014-result.json  seed-015-result.json  seed-016-result.json  seed-017-result.json  seed-018-result.json  seed-019-result.json  seed-020-result.json  seed-021-result.json  seed-022-result.json  seed-023-result.json  seed-024-result.json  seed-025-result.json  seed-026-result.json  seed-027-result.json
pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
portfolio/: index.html
scripts/: apply_branding.py  generate_report.py  seed_mock_data.py
tests/: conftest.py  test_01_login.py  (+2 more)
(+1089 files in other folders)
